# SkeletonViz

./: BoneAndTissuePipeline.cxx  BoneAndTissuePipeline.h  BoneOnlyPipeline.cxx  BoneOnlyPipeline.h  CMakeLists.txt  ClippingPlaneAddRemoveCallback.cxx  ClippingPlaneAddRemoveCallback.h  ClippingPlaneInteractionCallback.cxx  ClippingPlaneInteractionCallback.h  ClippingPlaneMaker.cxx  ClippingPlaneMaker.h  LICENSE  README.md  SkeletonViz.cxx  SkeletonViz.h  VisualizationModeCallback.cxx  VisualizationModeCallback.h
